--- a/style/all.css
+++ b/style/all.css
@@ -2,5 +2,5 @@ body {padding: 0; margin: 0; margin-left: 15%;}
 .top {background-color: #DDD; border-top-left-radius: 15px; padding: 15px 35px; height: 200px; color: #c30;}
 .top span {font-size: 4.5em; font-family: Georgia; font-style: italic; padding: 0;}
 .top p {padding: 0; margin: 0; font-family: Georgia; font-weight: bold; padding-left: .5em;}
-.top hr {height: 5px; background-color: #c30; margin-top: 20px;}
-.top hr + hr {margin-top: 5px;}
+.top hr {height: 8px; background-color: #c30; margin-top: 20px; border-color: transparent;}
+.top hr + hr {margin-top: 10px;}
