--- a/style/all.css
+++ b/style/all.css
@@ -1,10 +1,10 @@
 body {padding: 0; margin: 0; margin-left: 15%;}
-.top {background-color: #DDD; border-top-left-radius: 15px; padding: 15px 0; height: 200px; color: #c30;}
-.top span {font-size: 4.5em; font-family: Georgia; font-style: italic; padding: 0; margin: 0 35px;}
+.top {background-color: #844; border-top-left-radius: 15px; padding: 15px 0; height: 200px; color: #fdc;}
+.top span {font-size: 5.6em; font-variant: small-caps; font-family: "Trebuchet MS", Georgia; padding: 0; margin: 0 35px;}
 .top p {padding: 0; margin: 0 35px; font-family: Georgia; font-weight: bold; padding-left: .2em;}
-.top hr {height: 8px; background-color: #c30; margin-top: 20px; border-color: transparent; margin: 20px 0px 0px 35px;}
+.top hr {height: 8px; background-color: #fdc; margin-top: 20px; border-color: transparent; margin: 20px 0px 0px 35px;}
 .top hr + hr {margin-top: 10px;}
-.files {padding-top: 7px;}
+.files {padding-top: 7px; }
 .files > div > a:link, .files >div > a:visited, .files div > a:active { color:#500;}
 .files > div > a {font: normal 1em Georgia; letter-spacing: .3ex; margin-right: 1em; line-height: 2em; padding: 3px 6px; background-color: #fdc; text-decoration: none;}
 div.gist-post > h1 {padding-top: 20px; margin-top: 25px; margin-bottom:10px;  border-top: 22px groove #fdc;}
