--- a/style/all.css
+++ b/style/all.css
@@ -1,4 +1,4 @@
-body {padding: 0; margin: 0; margin-left: 15%;}
+body {padding: 0; margin: 0 8%;}
 .top {background-color: #844; border-top-left-radius: 15px; padding: 15px 0; height: 200px; color: #fdc;}
 .top span {font-size: 5.6em; font-variant: small-caps; font-family: "Trebuchet MS", Georgia; padding: 0; margin: 0 35px;}
 .top p {padding: 0; margin: 0 35px; font-family: Georgia; font-weight: bold; padding-left: .2em;}
@@ -8,3 +8,5 @@ body {padding: 0; margin: 0; margin-left: 15%;}
 .files > div > a:link, .files >div > a:visited, .files div > a:active { color:#500;}
 .files > div > a {font: normal 1em Georgia; letter-spacing: .3ex; margin-right: 1em; line-height: 2em; padding: 3px 6px; background-color: #fdc; text-decoration: none;}
 div.gist-post > h1 {padding-top: 20px; margin-top: 25px; margin-bottom:10px;  border-top: 22px groove #fdc;}
+.file > .wikistyle {padding: .7em;}
+.file > .gist {margin: .7em;}
