--- a/style/all.css
+++ b/style/all.css
@@ -4,6 +4,7 @@ body {padding: 0; margin: 2em 8%;}
 .top p {padding: 0; margin: 0 35px; font-family: Georgia; font-weight: bold; padding-left: .2em;}
 .top hr {height: 8px; background-color: #fdc; margin-top: 20px; border-color: transparent; margin: 20px 0px 0px 35px;}
 .top hr + hr {margin-top: 10px;}
+.gists > noscript > div {background-color: #ffa; height: 8em; font-size: 2em; padding: 1em; text-align: center; margin: 1em 0;}
 .files > div {padding-top: .1em; }
 .files > div > a:link, .files >div > a:visited, .files div > a:active { color:#500;}
 .files > div > a {margin-left: .7em; font: normal 1em Georgia; letter-spacing: .3ex; line-height: 2em; padding: 3px 6px; background-color: #fdc; text-decoration: none;}
@@ -11,3 +12,11 @@ div.gist-post > h1 {padding-top: 20px; margin-top: 25px; margin-bottom:10px;  bo
 .file > .wikistyle {padding: 0 .7em;}
 .file > .gist {margin: 0.1em 0.7em 0;}
 .file > .gist > .gist-file {margin-bottom: .7em;}
+.bottom {
+  color: #fdc;
+  margin-top: 1.5em;
+  background-color: #844; height: 6em; 
+  font: normal small-caps normal 1.5em "Trebuchet MS", Georgia;
+  padding: 1.5em 3em ;
+}
+
