--- a/style/all.css
+++ b/style/all.css
@@ -1,4 +1,4 @@
-body {padding: 0; margin: 2em 8%;}
+body {padding: 0; margin: 2em 8%; color:#444; background-color: #eee;}
 .top {background-color: #844; border-top-left-radius: 35px; border-bottom-right-radius: 35px; padding: 15px 0; height: 200px; color: #fdc;}
 .top span {font-size: 5.6em; font-variant: small-caps; font-family: "Trebuchet MS", Georgia; padding: 0; margin: 0 35px;}
 .top p {padding: 0; margin: 0 35px; font-family: Georgia; font-weight: bold; padding-left: .2em;}
